fix z-index issue -- temporary

--- a/src/Screens/PortfolioScreen/portfolioScreen.scss
+++ b/src/Screens/PortfolioScreen/portfolioScreen.scss
@@ -22,6 +22,6 @@
             font-size: 1em;
             color: #aaaaaa;
         }
-        z-index: -1;
+        z-index: 2;
     }
 }
